--- a/style.css
+++ b/style.css
@@ -1,87 +1,64 @@
-body{
+body {
     width: 100%;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 
 /* Head */
-
 .background-image {
-    width: 100%; /* Adjust width as needed */
-    height: 100vh; /* Set the height to control the visible area */
-    background-image: url(assets/slide-1.jpg); /* Replace with your image path */
-    background-size: cover; /* Ensures the image covers the entire div */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
-    background-position: center; /* Centers the image */
-}
-
-.navbar{
-    display: flex;
-    justify-content: center;
-    gap: 4%;
-    padding-top: 24px;
-}
-
-.logo{
-    width: 10%;
-    height: auto;
+    width: 100%;
+    height: 100vh;
+    background-image: url(assets/slide-1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 a{
-    text-decoration: none;
     color: white;
 }
 
-a:hover{
-    color: #1a878f;
+.nav-main{
+    font-size: calc(10px + 0.2vw);
+    gap: 3%;
+    justify-content: center;
+    align-items: center;
+    padding-top: 28px;
+}
+
+.nav-menu{
+    gap: 45px;
+    font-family: 'plus jakarta sans', sans-serif;
+    font-weight: 600;
+}
+
+.nav-link:hover{
+    color: #1aa4ae;
     transition-duration: 0.5s;
     transition-property: color;
-    transition-timing-function: ease;
+    transition-timing-function: ease-in-out;
 }
 
-.left-nav{
-    display: flex;
-    list-style: none;
-    align-items: center;
-    gap: 40px;
-    font-family: 'plus jakarta sans', sans-serif;
-    font-size: calc(10px + 0.2vw);
+.checkbtn{
+    font-size: 30px;
     color: white;
-    font-weight: 500;
+    display: none;
+    line-height: 80px;
+    margin-right: 40px;
+    float: right;
+    cursor: pointer;
 }
 
-.right-nav{
-    display: flex;
-    list-style: none;
-    align-items: center;
-    gap: 40px;
-    font-family: 'plus jakarta sans', sans-serif;
-    font-size: calc(10px + 0.2vw);
-    color: white;
-    font-weight: 500;
-}
-
-.hamburger{
+#check{
     display: none;
 }
 
-.bar{
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    transition: all 0.3 ease-in-out;
-    background-color: white;
-}
-
-.content {
-    position: relative; 
+.content{
     text-align: center;
-    color: black;
-    font-family: Arial, sans-serif;
-    padding: 20px;
 }
