--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ a{
 .headings{
     line-height: 40px;
     margin-bottom: 20px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 .main--heading{
@@ -171,4 +171,69 @@ a{
     line-height: clamp(15px, 2vw, 50px);
     font-weight: 300;
     letter-spacing: 1.5px;
+}
+
+.offers{
+    background-color: #18191B;
+    align-items: center;
+}
+
+.offer-row--1,
+.offer-row--2{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.offer-row--1{
+    padding-top: 100px;
+}
+
+.offer-row--2{
+    padding-bottom: 100px;
+    padding-top: 50px;
+}
+
+
+.offer-1,
+.offer-2,
+.offer-3,
+.offer-4,
+.offer-5,
+.offer-6,
+.offer-7,
+.offer-8{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    text-align: center;
+    font-family: 'plus jakarta sans', sans-serif;
+}
+
+.offer-1,
+.offer-2,
+.offer-3,
+.offer-5,
+.offer-6,
+.offer-7{
+    border-right: 2px solid grey;
+}
+
+.offer--name{
+    font-size: 16px;
+    margin: 20px 0px 10px 0px;
+}
+
+.offer--about{
+    font-size: 12px;
+    margin: 0 25px 20px 25px;
+}
+
+.more-offer--btn{
+    margin-bottom: 20px;
+    background-color: #116A70;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 15px;
+    border: none;
 }
