--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ a{
     text-align: center;
 }
 
+.slider--content{
+    margin-top: 40px;
+}
+
 .headings{
     line-height: 40px;
     margin-bottom: 20px;
@@ -173,67 +177,107 @@ a{
     letter-spacing: 1.5px;
 }
 
-.offers{
-    background-color: #18191B;
-    align-items: center;
-}
-
-.offer-row--1,
-.offer-row--2{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-}
-
-.offer-row--1{
-    padding-top: 100px;
-}
-
-.offer-row--2{
-    padding-bottom: 100px;
-    padding-top: 50px;
-}
-
-
-.offer-1,
-.offer-2,
-.offer-3,
-.offer-4,
-.offer-5,
-.offer-6,
-.offer-7,
-.offer-8{
+.offer-headings{
+    background-image: url(assets/slide-1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center !important;
+}
+
+.offer--headings{
+    line-height: clamp(35px, 3vw, 85px);
+
+}
+
+.offer-main--heading{
+    color: #21A7B2;
+    font-size: calc(45px + 3vw);
+    font-family: 'dancing script', sans-serif;
+}
+
+.offer-sub--heading{
     color: white;
-    text-align: center;
-    font-family: 'plus jakarta sans', sans-serif;
+    font-family: 'plus jakarta sans';
+    font-size: calc(20px + 1vw);
 }
 
-.offer-1,
-.offer-2,
-.offer-3,
-.offer-5,
-.offer-6,
-.offer-7{
-    border-right: 2px solid grey;
+.offer-main--heading,
+.offer-sub--heading,
+.offer--detail{
+    margin-left: 40px;
 }
 
-.offer--name{
-    font-size: 16px;
-    margin: 20px 0px 10px 0px;
+.offer--grid-1{
+    display: grid;
+    grid-template-columns: 5fr 5fr;
 }
 
-.offer--about{
-    font-size: 12px;
-    margin: 0 25px 20px 25px;
+.offer--grid-2{
+    display: grid;
+    grid-template-columns: 5fr 5fr;
 }
 
-.more-offer--btn{
-    margin-bottom: 20px;
-    background-color: #116A70;
+.offer-grid--item1,
+.offer-grid--item2,
+.offer-grid--item3,
+.offer-grid--item4,
+.offer-grid--item5,
+.offer-grid--item6,
+.offer-grid--item7,
+.offer-grid--item8,
+.offer-grid--item9,
+.offer-grid--item10,
+.offer-grid--item11,
+.offer-grid--item12{
+    background-color: #18191B;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.menu-img{
+    background-image: url(assets/bg-2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 400px;
+}
+
+.menu-main--heading{
+    color: #21A7B2;
+    font-size: calc(45px + 3vw);
+    font-family: 'dancing script', sans-serif;
+}
+
+.menu-sub--heading{
     color: white;
-    padding: 5px 10px;
-    border-radius: 15px;
-    border: none;
+    font-family: 'plus jakarta sans';
+    font-size: calc(20px + 1vw);
+}
+
+.menu-headings{
+    line-height: clamp(35px, 3vw, 85px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center !important;
+    padding-top: 150px;
+}
+
+.menu-list-1{
+    background-image: url(assets/bg-3.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1000px;
+}
+
+.menu-list-2{
+    background-image: url(assets/);
 }
