--- a/style-responsive.css
+++ b/style-responsive.css
@@ -127,7 +127,7 @@
     .menu-list-2 .medium-price span,
     .menu-list-2 .large-price span{
         display: inline;
-        color: ;
+        color: #209BA5;
     }
 
     .menu-list-1{
