--- a/style.css
+++ b/style.css
@@ -446,30 +446,38 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 200px;
+    height: 120px;
     flex-wrap: wrap;
 }
 
 .right-side{
     display: flex;
     gap: 10px;
-    margin: 0px 40px;
+    margin: 0px 80px;
     font-family: 'plus jakarta sans', sans-serif;
     align-items: center;
 }
 
 .left-side{
-    margin: 0px 40px;
+    margin: 0px 80px;
 }
 
 .left-side button{
     background-color: #18191B;
-    border: 4px solid #209BA5;
+    border: 2px solid #209BA5;
+    font-weight: 600;
     color: white;
-    padding: 5px 20px;
-    font-family: 'oswald', sans-serif;
+    padding: 7px 20px;
+    font-family: 'plus jakarta sans', sans-serif;
     font-size: 16px;
     border-radius: 20px;
+}
+
+.left-side button:hover{
+    background-color: white;
+    color: black;
+    transition: all 0.3s ease-in-out;
+    font-weight: 600;
 }
 
 .footer-1{
@@ -477,5 +485,77 @@ a{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 400px;
+    height: 100%;
+}
+
+.footer1-main--heading{
+    color: #21A7B2;
+    font-size: calc(45px + 3vw);
+    font-family: 'dancing script', sans-serif;
+}
+
+.footer1-sub--heading{
+    color: white;
+    font-family: 'plus jakarta sans';
+    font-size: calc(20px + 1vw);
+}
+
+.footer1-headings{
+    line-height: clamp(35px, 3vw, 85px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center !important;
+    padding-top: 100px;
+}
+
+.timings{
+    text-align: center;
+    margin: 0 20px;
+}
+
+.days{
+    color: #209BA5;
+    font-size: clamp(12px, calc(14px + 0.3vw), 16px);
+    font-weight: 700;
+    font-family: 'plus jakarta sans', sans-serif;
+}
+
+.hours{
+    color: white;
+    font-family: 'plus jakarta sans', sans-serif;
+    font-size: clamp(18px, calc(20px + 0.8vw), 22px);
+}
+
+.footer{
+    color: white;
+    height: 25vh; 
+    background-color: #0E464A; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+}
+
+.address{
+    display: flex; 
+    flex-direction: column; 
+    justify-content: start; 
+    width: 30%;
+}
+
+.footer-logo{
+    display: flex; 
+    justify-content: center; 
+    width: clamp(20%, 30%);
+    width: 25%;
+}
+
+.socialmedia--icons{
+    display: flex;
+    justify-content: end;
+    width: 30%;
+}
+
+.socialmedia--icons i{
+    margin-right: 20px;
 }
