--- a/style-responsive.css
+++ b/style-responsive.css
@@ -167,10 +167,13 @@
 @media (max-width: 990px) {
     .footer{
         flex-direction: column;
+        height: 50vh;
     }
 
     .address{
         text-align: center;
+        margin-bottom: 30px;
+        width: 100%;
     }
 
     .socialmedia--icons{
@@ -179,22 +182,30 @@
 
     .footer-logo{
         justify-content: center;
+        margin-bottom: 30px;
+        width: 40%;
+    }
+
+    .footer-logo img{
+        width: 100%;
     }
 }
+
 
 @media (max-width: 730px) {
     .contact-number{
         justify-content: center;
         text-align: center;
+        margin: 30px 0;
     }
 
-    .right-side{
-        margin-top: 20px;
+    /* .right-side{
+        margin: 20px 0;
     }
 
     .left-side{
-        margin-bottom: 20px;
-    }
+        margin-bottom: 200px;
+    } */
 }
 
 @media (max-width: 400px) {
@@ -211,5 +222,9 @@
     .contact-number{
         justify-content: center;
         text-align: center;
+    }
+
+    .footer-logo{
+        width: 40%;
     }
 }
