--- a/style.css
+++ b/style.css
@@ -564,4 +564,116 @@ a{
     margin-right: 20px;
 }
 
+.menu-main--bg-img{
+    background-image: url(assets/bg-2.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%;
+}
 
+.menu-page--slider-headings{
+    text-align: center;
+    margin: 30px 0px;
+    padding-bottom: 100px;
+}
+
+.menu-page--slider-main-heading{
+    color: #21A7B2;
+    font-size: calc(45px + 3vw);
+    font-family: 'dancing script', sans-serif;
+}
+
+.menu-page--slider-sub-heading{
+    color: white;
+    font-family: 'plus jakarta sans';
+    font-size: calc(20px + 1vw);
+    font-weight: 700;
+}
+
+.menu-page--slider-navigated-page{
+    color: lightgray;
+    font-family: 'plus jakarta sans', sans-serif;
+}
+
+.slash{
+    color: #116A70;
+    font-weight: 600;
+}
+
+.current-page{
+    color: white;
+}
+
+.menu-page--parent-container1,
+.menu-page--parent-container2{
+    display: flex;
+    gap: 20px;
+    color: white;
+    justify-content: center;
+    margin: 50px 100px;
+}
+
+.menu-page--list-name{
+    font-family: 'dancing script';
+    display: flex;
+    justify-content: space-between;
+    gap: 90px;
+    margin-bottom: 40px;
+}
+
+.coffee{
+    width: 100%;
+}
+
+.menu-page--medium-size,
+.menu-page--large-size{
+    text-align: center;
+    font-family: 'plus jakarta sans';
+}
+
+.menu-page--medium-size{
+    margin-right: -30px;
+}
+
+.menu-page--coffee-sizes{
+    justify-content: space-between;
+    display: flex;
+    text-align: center;
+    font-family: 'oswald', sans-serif;
+}
+
+#menu-page--items{
+    display: flex;
+    gap: 100px;
+    margin: 15px 0px;
+}
+
+.menu-page--coffee-name{
+    font-family: 'oswald', sans-serif;
+    font-size: clamp(14px, calc(18px + 0.3vw), 28px);
+    line-height: 20px;
+}
+
+.menu-page--coffee-name span{
+    font-family: Arial, Helvetica, sans-serif;
+    color: grey;
+    font-size: 14px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+.menu-page--medium-price,
+.menu-page--large-price{
+    display: flex;
+    font-family: 'oswald', sans-serif;
+}
+
+.menu-page--list1,
+.menu-page--list2,
+.menu-page--list3,
+.menu-page--list4{
+    padding: 30px;
+    border: 2px solid #21A7B2;
+    border-radius: 50px;
+}
