--- a/style-responsive.css
+++ b/style-responsive.css
@@ -13,7 +13,8 @@
     }
 
     .slider--content{
-        margin-top: 100px;
+        margin-top: 50px;
+        margin-bottom: 60px;
     }
 
     .nav-main{
