--- a/style.css
+++ b/style.css
@@ -12,13 +12,20 @@ body {
 }
 
 /* Head */
-.background-image {
+.slider-container{
     width: 100%;
     height: 100vh;
-    background-image: url(assets/slide-1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    position: absolute;
+    overflow: hidden;
+}
+
+.slide{
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    z-index: -3;
+    transition: all 0.8s ease-in-out;
 }
 
 a{
@@ -76,13 +83,14 @@ a{
 .slider--content{
     display: flex;
     flex-direction: column;
+    padding-bottom: 10%;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
 
 .slider--content{
-    margin-top: 40px;
+    margin-top: 2%;
 }
 
 .headings{
