--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 .slide{
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
     position: absolute;
     z-index: -3;
@@ -253,7 +253,7 @@ a{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 50vh;
+    height: 50%;
 }
 
 .menu-main--heading{
@@ -274,7 +274,7 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center !important;
-    padding-top: 150px;
+    padding: 10% 0;
 }
 
 .menu-list-1{
