--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     list-style: none;
 }
 
+
 /* Head */
 .slider-container{
     width: 100%;
@@ -23,10 +24,12 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
     position: absolute;
     z-index: -3;
-    transition: all 0.8s ease-in-out;
+    transition: all 1s ease-in-out;
 }
+
 
 a{
     color: white;
