--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ a{
         width: 50%;
         transition: all 0.3s ease-in-out;
         transform: translateX(-100%);
+        font-size: calc(14px + 0.3vw);
     }
     .showMenu{
         transform: translateX(0);
